[package]
name = "tack"
version = "0.1.0"
edition = "2021"
description = "A streamlit-like UI framework for Rust, built on egui"
license = "MIT"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
egui_plot = "0.31"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1"
